syntax = "proto3";

package proto;

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc Multiply(MultiplyRequest) returns (MultiplyResponse) {}
}

message SumRequest {
    repeated int64 sequence = 1;
}

message SumResponse {
    int64 result =1;
}

message MultiplyRequest {
    int64 multiplicand = 1;
    int64 multiplier = 2;
}

message MultiplyResponse {
    int64 product = 1;
}